    Added new `font_css` setting for fonts to be added to both containing document and the editor #TINY-6199
    Added a new `ImageUploader` API to simplify uploading image data to the configured `images_upload_url` or `images_upload_handler` #TINY-4601
    Added Oxide variable to define the container background color in fullscreen mode #TINY-6903
    Changed copying table columns or entire tables will now retain an appropriate width when pasted #TINY-6664
    Changed the `lists` plugin to apply list styles to all text blocks within a selection #TINY-3755
    Changed the `advlist` plugin to log a console error message when the `list` plugin isn't enabled #TINY-6585
    Changed the z-index of the `setProgressState(true)` throbber so it does not hide notifications #TINY-6686
    Changed the type signature for `editor.selection.getRng()` incorrectly returning `null` #TINY-6843
    Changed some `SaxParser` regular expressions to improve performance #TINY-6823
    Fixed `col` elements incorrectly transformed to `th` elements when converting columns to header columns #TINY-6715
    Fixed a number of table operations not working when selecting 2 table cells on Mozilla Firefox #TINY-3897
    Fixed a memory leak by backporting an upstream Sizzle fix #TINY-6859
    Fixed table width style was removed when copying #TINY-6664
    Fixed focus lost while typing in the `charmap` or `emoticons` dialogs when the editor is rendered in a shadow root #TINY-6904
    Fixed base64 URLs used in style attributes were corrupted when parsing HTML #TINY-6828
    Fixed the order of CSS precedence of `content_style` and `content_css` in the `preview` and `template` plugins. `content_style` now has precedence #TINY-6529
    Fixed an issue where the image dialog tried to calculate image dimensions for an empty image URL #TINY-6611
    Fixed an issue where `scope` attributes on table cells would not change as expected when merging or unmerging cells #TINY-6486